fix illustration z-index

--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -56,6 +56,7 @@ small,
 .pma-illustration {
     position: relative;
     margin-bottom: -28px;
+    z-index: 9999;
 }
 .illustration-index {
     position: absolute;
